@@ -1,0 +1,10 @@
+
+/proc/curproc/cmdline:
+./procfs-cmdline-exe\0arg1\0arg 2\0arg3\0
+/proc/<pid>/cmdline:
+./procfs-cmdline-exe\0arg1\0arg 2\0arg3\0
+Result of readlink("/proc/curproc/file"): procfs-cmdline-exe
+Result of readlink("/proc/<pid>/file"): procfs-cmdline-exe
+Result of readlinkat("/proc/curproc/file"): procfs-cmdline-exe
+Result of readlinkat("/proc/<pid>/file"): procfs-cmdline-exe
+
