@@ -89,6 +89,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 515612  Sanity check VG_(realpath) and VG_(readlink) return values
 515731  Distinguish between realloc functions in realloc size 0 error messages
 515810  Update the LTP version in valgrind testsuite to 20260130
+515992  Add FreeBSD /proc virtualisation for cmdline and file
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
